Logo: added purple cover behind left side to fix png whitespace bug

--- a/assets/styles/src/modules/_header.scss
+++ b/assets/styles/src/modules/_header.scss
@@ -190,6 +190,7 @@
 	}
 
 	#logo {
+		position: relative;
 		display: table-cell;
 		margin: 0;
 		width: 85%;
@@ -200,7 +201,22 @@
 			width: 446px;
 		}
 
+		// take care of ~1px white space to the right of the logo
+		&:before {
+			display: block;
+			content: "";
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: -1px;
+			background: $accent;
+			width: 2px;
+			height: 100%;
+		}
+
 		a {
+			position: relative;
+			z-index: 100;
 			display: block;
 			padding-top: 22.4%;
 			width: 100%;
